@@ -152,6 +152,13 @@
            </widget>
           </item>
           <item>
+           <widget class="QCheckBox" name="checkBox_user_shared">
+            <property name="text">
+             <string>shared with me</string>
+            </property>
+           </widget>
+          </item>
+          <item>
            <spacer name="horizontalSpacer">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
